--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <script>
+      window.GLOBAL_ENV = {
+        API_ENDPOINT: "http://localhost:8000",
+        GATEWAY_ENDPOINT: "ws://localhost:3000",
+        IMAGE_ENDPOINT: "https://public-s3.theandru.ru",
+      };
+    </script>
+
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Messenger</title>
