Now its using React Query

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       window.GLOBAL_ENV = {
         API_ENDPOINT: "http://localhost:8000",
         GATEWAY_ENDPOINT: "ws://localhost:3000",
-        IMAGE_ENDPOINT: "https://public-s3.theandru.ru",
+        IMAGE_ENDPOINT: "https://media.theandru.ru",
       };
     </script>
 
