--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <script>
       window.GLOBAL_ENV = {
-        API_ENDPOINT: "http://localhost:8000",
-        GATEWAY_ENDPOINT: "ws://localhost:3000",
+        API_ENDPOINT: "http://192.168.0.157:8000",
+        GATEWAY_ENDPOINT: "ws://192.168.0.157:3000",
         IMAGE_ENDPOINT: "https://media.theandru.ru",
       };
     </script>
