Handle new message type CHANNEL_CREATE

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <script>
       window.GLOBAL_ENV = {
         API_ENDPOINT: "http://192.168.0.157:8000",
-        GATEWAY_ENDPOINT: "ws://192.168.0.157:3000",
-        IMAGE_ENDPOINT: "https://media.theandru.ru",
+        GATEWAY_ENDPOINT: "ws://192.168.0.157:3030",
+        IMAGE_ENDPOINT: "https://cc81154d-55c6-4dfe-8f63-10fb9684572e.selstorage.ru",
       };
     </script>
 
